# knister

./: .gitignore  README.md  dialog.py  knister.icns  main.py  model.py  pyproject.toml  setup.py  test_main.py  ui.py
src/knister/: __main__.py  dialog.py  test_main.py
src/knister.dist-info/: METADATA  top_level.txt
